--- a/2second.html
+++ b/2second.html
@@ -14,23 +14,23 @@
 
     <!-- CSS -->
     <!-- Flexslider -->
-    <link rel="stylesheet" type="text/css" href="assets/css/plugins/flexslider.css">
+    <link rel="stylesheet" type="text/css" href="template/assets/css/plugins/flexslider.css">
     <!-- Font-Awesome 6 PRO-->
-    <link rel="stylesheet" href="assets/fonts/all.min.css"/>
+    <link rel="stylesheet" href="template/assets/fonts/all.min.css"/>
     <!-- LightCase -->
-    <link rel="stylesheet" type="text/css" href="assets/css/plugins/lightcase.css">
+    <link rel="stylesheet" type="text/css" href="template/assets/css/plugins/lightcase.css">
     <!-- SlickNav -->
-    <link rel="stylesheet" type="text/css" href="assets/css/plugins/slicknav.min.css">
+    <link rel="stylesheet" type="text/css" href="template/assets/css/plugins/slicknav.min.css">
     <!-- Animate -->
-    <link rel="stylesheet" type="text/css" href="assets/css/plugins/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="template/assets/css/plugins/animate.min.css">
     <!-- Bootstrap 5 -->
-    <link rel="stylesheet" type="text/css" href="assets/css/plugins/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="template/assets/css/plugins/bootstrap.min.css">
     <!-- Cube Portfolio -->
-    <link rel="stylesheet" type="text/css" href="assets/css/plugins/cubeportfolio.min.css">
+    <link rel="stylesheet" type="text/css" href="template/assets/css/plugins/cubeportfolio.min.css">
     <!-- Custom styles CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="template/assets/css/main.css">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="template/assets/images/favicon.png">
 
 </head>
 
@@ -150,45 +150,45 @@
 
 <!-- Javascript files -->
 <!-- jQuery -->
-<script src="assets/js/plugins/jquery-1.12.4.min.js"></script>
+<script src="template/assets/js/plugins/jquery-1.12.4.min.js"></script>
 <!-- Modernizr -->
-<script src="assets/js/plugins/modernizr.js"></script>
+<script src="template/assets/js/plugins/modernizr.js"></script>
 <!-- jQuery.appear -->
-<script src="assets/js/plugins/jquery.appear.js"></script>
+<script src="template/assets/js/plugins/jquery.appear.js"></script>
 <!-- Lettering -->
-<script src="assets/js/plugins/lettering.js"></script>
+<script src="template/assets/js/plugins/lettering.js"></script>
 <!-- Textillate -->
-<script src="assets/js/plugins/textillate.js"></script>
+<script src="template/assets/js/plugins/textillate.js"></script>
 <!-- Wow -->
-<script src="assets/js/plugins/wow.js"></script>
+<script src="template/assets/js/plugins/wow.js"></script>
 <!-- Jarallax -->
-<script src="assets/js/plugins/jarallax.js"></script>
+<script src="template/assets/js/plugins/jarallax.js"></script>
 <!-- Lightcase -->
-<script src="assets/js/plugins/lightcase.js"></script>
+<script src="template/assets/js/plugins/lightcase.js"></script>
 <!-- Skills bar -->
-<script src="assets/js/plugins/skills-bar.js"></script>
+<script src="template/assets/js/plugins/skills-bar.js"></script>
 <!-- Slick Nav -->
-<script src="assets/js/plugins/slick-nav.js"></script>
+<script src="template/assets/js/plugins/slick-nav.js"></script>
 <!-- Flex Slider -->
-<script src="assets/js/plugins/flexslider.js"></script>
+<script src="template/assets/js/plugins/flexslider.js"></script>
 <!-- Images Loaded -->
-<script src="assets/js/plugins/images-loaded.js"></script>
+<script src="template/assets/js/plugins/images-loaded.js"></script>
 <!-- Isotope -->
-<script src="assets/js/plugins/isotope.js"></script>
+<script src="template/assets/js/plugins/isotope.js"></script>
 <!-- Cube Portfolio -->
-<script src="assets/js/plugins/jquery.cubeportfolio.min.js"></script>
+<script src="template/assets/js/plugins/jquery.cubeportfolio.min.js"></script>
 <!-- Google map -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV1KS10sb3O462XosfZTKohHJwi6C0joo"></script>
 <!-- Revolution JS Files -->
-<script src="assets/js/plugins/rev-slider/jquery.themepunch.tools.min.js"></script>
-<script src="assets/js/plugins/rev-slider/jquery.themepunch.revolution.min.js"></script>
-<script src="assets/js/plugins/rev-slider/revolution.extension.kenburn.min.js"></script>
-<script src="assets/js/plugins/rev-slider/revolution.extension.layeranimation.min.js"></script>
-<script src="assets/js/plugins/rev-slider/revolution.extension.navigation.min.js"></script>
-<script src="assets/js/plugins/rev-slider/revolution.extension.parallax.min.js"></script>
-<script src="assets/js/plugins/rev-slider/revolution.extension.slideanims.min.js"></script>
+<script src="template/assets/js/plugins/rev-slider/jquery.themepunch.tools.min.js"></script>
+<script src="template/assets/js/plugins/rev-slider/jquery.themepunch.revolution.min.js"></script>
+<script src="template/assets/js/plugins/rev-slider/revolution.extension.kenburn.min.js"></script>
+<script src="template/assets/js/plugins/rev-slider/revolution.extension.layeranimation.min.js"></script>
+<script src="template/assets/js/plugins/rev-slider/revolution.extension.navigation.min.js"></script>
+<script src="template/assets/js/plugins/rev-slider/revolution.extension.parallax.min.js"></script>
+<script src="template/assets/js/plugins/rev-slider/revolution.extension.slideanims.min.js"></script>
 <!-- Custom -->
-<script src="assets/js/main.js"></script>
+<script src="template/assets/js/main.js"></script>
 
 
 </body>
