MASTER sem files updated

--- a/2second.html
+++ b/2second.html
@@ -102,23 +102,18 @@
                     Дисциплины 2 года обучения
                 </h2>
                 <div class="d-flex flex-column align-items-left my-5">
-                    <a href="page1.html" class="bp-filter-item">Веб-проектирование и веб-языки</a>
-                    <a href="page1.html" class="bp-filter-item">Серверные веб-технологии</a>
-                    <a href="https://replit.com/repls/folder/Python.%204%20sem"
-                       class="bp-filter-item">Программирование</a>
-                    <a href="page1.html" class="bp-filter-item">Технологии компьютерного моделирования</a>
+                    <a href="https://github.com/ollyeys/university-portfolio/tree/main/python-sem-3"
+                       class="bp-filter-item">Программирование, 3 семестр</a>
+                    <a href="https://github.com/ollyeys/university-portfolio/tree/main/python-sem-4"
+                       class="bp-filter-item">Программирование, 4 семестр</a>
                     <a href="https://disk.yandex.ru/d/hPuxpzqsFhgK1Q" class="bp-filter-item">Интегралы и
                         дифференциальные уравнения</a>
-                    <a href="page1.html" class="bp-filter-item">Вычислительная техника</a>
                     <a href="https://disk.yandex.ru/d/Su4q7U7jhTYyGg" class="bp-filter-item">Операционные системы</a>
                     <a href="https://disk.yandex.ru/client/disk/Herzen/3%20sem/Анализ%20данных" class="bp-filter-item">Анализ
                         данных</a>
-                    <a href="page3.html" class="bp-filter-item">Вычислительная математика</a>
-                    <a href="page3.html" class="bp-filter-item">Основы бизнес-информатики</a>
-                    <a href="page3.html" class="bp-filter-item">Математические основы компьютерной графики</a>
                     <a href="https://drive.google.com/drive/folders/1Xx9COy_ytUXPivkpASoGVvCg-AxBqLvJ"
                        class="bp-filter-item">Базы данных </a>
-                    <a href="page3.html" class="bp-filter-item">Линейная алгебра</a>
+                    <a href="https://disk.yandex.ru/d/PQ5mple4bNkR0g" class="bp-filter-item">Линейная алгебра</a>
                     <a href="https://disk.yandex.ru/d/2R9CHwLo5_3Uig" class="bp-filter-item">Курсовая работа</a>
                 </div>
             </div>
