--- a/3third.html
+++ b/3third.html
@@ -117,27 +117,22 @@
                     Дисциплины 3 года обучения
                 </h2>
                 <div class="d-flex flex-column align-items-left my-5">
-                    <a href="page1.html" class="bp-filter-item">IT-менеджмент</a>
-                    <a href="page1.html" class="bp-filter-item">Интегрированные издательские системы</a>
                     <a href="https://drive.google.com/drive/folders/17jerfM-FADBcb4HscvCM7tWb9wpRUvy_"
                        class="bp-filter-item">Компьютерная графика</a>
-                    <a href="page1.html" class="bp-filter-item">Основы бизнес-информатики</a>
                     <a href="https://disk.yandex.ru/d/lSVjIYhps0mvog" class="bp-filter-item">Пактикум по письменному
                         переводу профессионально-ориентированных текстов</a>
-                    <a href="https://replit.com/repls/folder/Python.%205%20sem"
-                       class="bp-filter-item">Программирование</a>
-                    <a href="page3.html" class="bp-filter-item">Прикладные информационные системы</a>
-                    <a href="page3.html" class="bp-filter-item">Сети и телекоммуникации</a>
+                    <a href="https://github.com/ollyeys/university-portfolio/tree/main/python-sem-5"
+                       class="bp-filter-item">Программирование, семестр 5</a>
+                    <a href="https://github.com/ollyeys/university-portfolio/tree/main/python-sem-6"
+                       class="bp-filter-item">Программирование, семестр 6</a>
                     <a href="https://disk.yandex.ru/d/A9Y_Vej9u86seQ" class="bp-filter-item">Техника и технологии
                         представления и публикации информации</a>
-                    <a href="page3.html" class="bp-filter-item">Управление программными проектами (курсовая)</a>
-                    <a href="page3.html" class="bp-filter-item">Защита информации</a>
+                    <a href="https://docs.google.com/document/d/1f7u5GCBNlZgMU9Wzfhh5NOHmjYd7F1_R/edit?usp=sharing&ouid=107134248640917151165&rtpof=true&sd=true" class="bp-filter-item">Управление программными проектами (курсовая)</a>
                     <a href="https://disk.yandex.ru/d/VaHsIUj4_VwBCg" class="bp-filter-item">Инфографика</a>
                     <a href="https://disk.yandex.ru/client/disk/Herzen/6%20sem/Практика"
                        class="bp-filter-item">Практика</a>
                     <a href="https://disk.yandex.ru/d/w3SwRhbl7mEMnQ" class="bp-filter-item">Информационные технологии и
                         системы бизнес-аналитики</a>
-                    <a href="page3.html" class="bp-filter-item">Основы корпоративного электронного обучения</a>
                     <a href="https://disk.yandex.ru/d/7IT15SwtxnEi7g" class="bp-filter-item">Прикладные информационные
                         технологии</a>
                     <a href="https://drive.google.com/drive/folders/1-_SB5pzIouQ2JDvXQyJF7QKTYt-htA4P"
