--- a/4fourth.html
+++ b/4fourth.html
@@ -117,22 +117,15 @@
                     Дисциплины 4 года обучения
                 </h2>
                 <div class="d-flex flex-column align-items-left my-5">
-                    <a href="page1.html" class="bp-filter-item">Инженерия знаний</a>
-                    <a href="page1.html" class="bp-filter-item">Иностранный язык</a>
-                    <a href="page1.html" class="bp-filter-item">Информационные средства и технологии инженерных и
+                    <a href="https://disk.yandex.ru/d/imEgvJTfRmGIwg" class="bp-filter-item">Информационные средства и технологии инженерных и
                         научных расчетов</a>
-                    <a href="page1.html" class="bp-filter-item">Лингвистические основы иноязычной коммуникации</a>
-                    <a href="page1.html" class="bp-filter-item">Организация электронной образовательной среды +
-                        Курсовая</a>
-                    <a href="https://replit.com/repls/folder/Python.%207sem" class="bp-filter-item">Программирование</a>
-                    <a href="page3.html" class="bp-filter-item">IT-рекрутмент</a>
-                    <a href="page3.html" class="bp-filter-item">Научно-исследовательский проект</a>
+                    <a href="https://github.com/ollyeys/university-portfolio/tree/main/python-sem-7" class="bp-filter-item">Программирование, семестр 7</a>
                     <a href="https://disk.yandex.ru/d/2S2iN9HJ3B7Zkg" class="bp-filter-item">Языки спецификаций</a>
                     <a href="https://drive.google.com/drive/folders/1Ask6Km2ojqCE1oC2pSbPVDBJvwUXM00i"
                        class="bp-filter-item">Производственная практика</a>
-                    <a href="page3.html" class="bp-filter-item">Социальные и профессиональные вопросы информатики и
+                    <a href="https://disk.yandex.ru/d/nyL9dj6RNNY_xA" class="bp-filter-item">Социальные и профессиональные вопросы информатики и
                         информационных технологий</a>
-                    <a href="page3.html" class="bp-filter-item">Теория информационных процессов и систем</a>
+                    <a href="https://disk.yandex.ru/d/iJeUu2Oxwx6YoQ" class="bp-filter-item">Мировые информационные ресурсы и цифровые библиотеки</a>
                 </div>
             </div>
         </div>
